add closest neighbour for transitive synonyms to be able to follow where they come from
